tests/jastadd/negative/type_errors/L2/4_TypeCheckingForStmt.ob
MODULE TestModule;
	CONST i = 0;
BEGIN
    FOR i := 1 TO 2 DO
    END
END TestModule.
